platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_65.platter
start(){
bill(0-array + 2);
}